# EchoSub

./: .gitignore  .prettierignore  ARCHITECTURE.md  DEVELOPMENT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: fix-macos-dylibs.mjs  prepare-macos-sidecars.mjs  prepare-sidecars.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_ops.rs  lib.rs  local_llm.rs  main.rs  media_server.rs  model_manager.rs  oss.rs  prompt.rs  srt_batch.rs  state.rs  translate.rs  types.rs  whisper.rs
src-tauri/src/providers/: dashscope.rs  mod.rs  text_translate.rs
src/components/: DropZone.tsx  ErrorBoundary.tsx  ExportButton.tsx  Header.tsx  ProcessingPanel.tsx  SettingsModal.tsx  SubtitlePreview.tsx
src/components/ApiKeyModal/: index.tsx
src/components/CardActionBtn/: index.tsx
src/components/DropZone/: index.tsx
src/components/Dropdown/: index.test.tsx  index.tsx
src/components/ErrorBoundary/: index.tsx
src/components/ExportButton/: index.tsx
src/components/FilePill/: index.tsx
src/components/Icon/: index.tsx
src/components/LangSelect/: index.tsx
src/components/Modal/: create.ts  index.tsx
src/components/ModelManagerModal/: index.tsx
src/components/Popover/: index.tsx
src/components/ProcessingPanel/: index.tsx
src/components/SettingsPopover/: index.tsx
src/components/SubtitlePreview/: index.tsx
src/components/Switch/: index.tsx
src/config/: index.ts  messages.ts  modals.ts  theme.ts
src/hooks/: useAudioExtraction.ts  useTranslation.ts
src/layouts/: RootLayout.tsx
src/services/: ffmpegService.test.ts  ffmpegService.ts  historyService.ts  localLlmService.ts  mediaService.test.ts  mediaService.ts  pipelineSession.test.ts  pipelineSession.ts  playerSession.test.ts  playerSession.ts  translateService.ts  whisperService.ts
src/stores/: historyStore.ts  messageStore.ts  modalStore.ts  settingsStore.test.ts  settingsStore.ts  translationStore.test.ts  translationStore.ts
src/types/: index.ts
src/utils/: srtParser.test.ts  srtParser.ts
(+50 files in other folders)
