[package]
name = "subtitle-translator"
version = "0.1.0"
description = "A desktop subtitle translation tool using AI"
authors = ["you"]
edition = "2021"

[lib]
name = "subtitle_translator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "multipart", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
