[package]
name = "EchoSub"
version = "0.1.0"
description = "A desktop subtitle translation tool using AI"
authors = ["you"]
edition = "2021"

[lib]
name = "subtitle_translator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "multipart", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
whisper-rs = "0.16"
hound = "3"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "util"] }

# Platform-specific acceleration features for whisper.cpp.
# macOS → Metal (Apple Silicon GPU); other platforms build CPU-only by default
# (CUDA/OpenBLAS can be enabled per-target later if needed).
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
